@@ -1,5 +1,10 @@
 2007-05-04  Sven Neumann  <sven@gimp.org>
 
+	* libgimp/gimpprogress.c (gimp_progress_update): print a warning
+	on stderr if a plug-in updates the progress too frequently.
+
+2007-05-04  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/ifscompose/ifscompose.c
 	* plug-ins/ifscompose/ifscompose_utils.c: reduce the number of
 	progress updates.
